--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@tanstack/react-query": "^4.29.7",
     "graphql": "^16.6.0",
+    "graphql-request": "^6.0.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.20.0",
-    "urql": "^4.0.2",
-    "wonka": "^6.3.2"
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
